Update footer link to specific GitHub repository

--- a/plus-add-on/index.html
+++ b/plus-add-on/index.html
@@ -13,7 +13,7 @@
 
 
 <footer>
-    <p>This project was coded by Siri and is <a href="https://github.com" target="_blank">open sourced on GitHub.</a></p>
+    <p>This project was coded by Siri and is <a href="https://github.com/suh79/worldClock" target="_blank">open sourced on GitHub.</a></p>
 
 </footer>
 <script src="javascript/index.js"></script>
