Added som basic html

--- a/plus-add-on/index.html
+++ b/plus-add-on/index.html
@@ -8,7 +8,29 @@
 </head>
 <body>
     <h1>World clock</h1>
+    <select id="city-selector">
+        <option value="select">Select a city..</option>
+        <option value="New_York">New York</option>
+        <option value="London">London</option>
+        <option value="Tokyo">Tokyo</option>
+        <option value="Sydney">Sydney</option>
+        <option value="Moscow">Moscow</option>
+        <option value="Dubai">Dubai</option>
+        <option value="Mumbai">Mumbai</option>
+        <option value="Beijing">Beijing</option>
+        <option value="Rio_de_Janeiro">Rio de Janeiro</option>
+    </select>
 
+    <div class="city" id="New_York">
+        <h2>New York 🇺🇸</h2>
+        <div class="date">January 20th 2026</div>
+        <div class="time">10:34 AM</div>
+    </div>
+    <div class="city" id="London">
+        <h2>London 🇬🇧</h2>
+        <div class="date">January 20th 2026</div>
+        <div class="time">10:34 AM</div>
+    </div>
 </body>
 
 
