Revise footer content and formatting
Updated footer text to include a heart emoji and improved formatting.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>World clock Siri</title>
 </head>
 <body>
+      <div class="container">
     <h1>World clock</h1>
 <select id="city-selector">
     <option value="select">Select a city..</option>
@@ -22,14 +23,21 @@
 </select>
 
 <div class="city" id="New_York">
+    <div>
     <h2>New York 🇺🇸</h2>
     <div class="date">January 20th 2026</div>
-    <div class="time">10:34 AM</div>
+    </div>
+     <div class="time">1:48:15 <small> AM </small></div>
 </div>
-<div class="city" id="London">
-    <h2>London 🇬🇧</h2>
+
+<div class="city" id="Paris">
+    <div>
+    <h2>Paris 🇫🇷</h2>
     <div class="date">January 20th 2026</div>
-    <div class="time">10:34 AM</div>
+    </div>
+     <div class="time">1:48:15 <small> AM </small></div>
+</div>
+
 </div>
 
 
@@ -37,8 +45,10 @@
 
 
 <footer>
-    <p>This project was coded by Siri and is <a href="https://github.com/suh79/worldClock/" target="_blank">open sourced on GitHub.</a></p>
-
+    <p>This project was coded with ❤️ by <strong> Siri</strong> 
+        and is
+         <a href="https://github.com/suh79/worldClock/" 
+        target="_blank">open sourced on GitHub.</a></p>
 </footer>
 <script src="javascript/index.js"></script>
 </html>
