Update city options and remove placeholder data

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>World clock Siri</title>
 </head>
 <body>
-      <div class="container">
+<div class="container">
     <h1>World clock</h1>
 <select id="city-selector">
     <option value="select">Select a city..</option>
-    <option value="New_York">New York</option>
-    <option value="London">London</option>
+    <option value="los_Angeles">Los angeles</option>
+    <option value="Paris">Paris</option>
     <option value="Tokyo">Tokyo</option>
     <option value="Sydney">Sydney</option>
     <option value="Moscow">Moscow</option>
@@ -22,24 +22,22 @@
     <option value="Rio_de_Janeiro">Rio de Janeiro</option>
 </select>
 
-<div class="city" id="New_York">
+<div class="city" id="los_Angeles">
     <div>
-    <h2>New York 🇺🇸</h2>
-    <div class="date">January 20th 2026</div>
+    <h2>Los Angeles 🇺🇸</h2>
+    <div class="date"></div>
     </div>
-     <div class="time">1:48:15 <small> AM </small></div>
+     <div class="time"></div>
 </div>
 
-<div class="city" id="Paris">
+<div class="city" id="paris">
     <div>
     <h2>Paris 🇫🇷</h2>
-    <div class="date">January 20th 2026</div>
+    <div class="date"></div>
     </div>
-     <div class="time">1:48:15 <small> AM </small></div>
+     <div class="time"></div>
 </div>
-
 </div>
-
 
 </body>
 
