Replace Moscow option with Norway in dropdown

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <option value="Europe/Paris">Paris</option>
     <option value="Asia/Tokyo">Tokyo</option>
     <option value="Australia/Sydney">Sydney</option>
-    <option value="Europe/Moscow">Moscow</option>
+    <option value="Europe/Norway">Norway</option>
     <option value="Asia/Dubai">Dubai</option>
     <option value="Asia/Kolkata">Kolkata</option>
     <option value="Asia/Shanghai">Shanghai</option>
